rogersondemand.com (archived on 2010-08-15)
{
  "alexa_rank": 182478,
  "analysis_subcorpus": true,
  "categories": "entertainment;shopping;streamingmedia",
  "char_count": 5913,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "rogersondemand.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101008104245id_/http://www.rogersondemand.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101008104245id_/http%3A//rogersondemand.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "rogersondemand.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100815030326id_/http%3A//www.rogersondemand.com/privacy",
  "policy_title": "Privacy Policy - Rogers On Demand Online",
  "policy_url": "rogersondemand.com/privacy",
  "sha1": "1b5c8d53da2de841d809478d08be46754f0dd0b2",
  "simhash": 6059194501898565805,
  "simhash_updated": false,
  "site_hostname": "rogersondemand.com",
  "site_url": "http://rogersondemand.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100815030326",
  "word_count": 906,
  "year": 2010
}

--- a/r/ro/rog/rogersondemand.com.html
+++ b/r/ro/rog/rogersondemand.com.html
@@ -1,15 +1,15 @@
-<!--The following is the downloaded HTML source of the rogersondemand.com privacy policy that was archived on 2010-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100614003237id_/http%3A//www.rogersondemand.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rogersondemand.com privacy policy that was archived on 2010-08-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100815030326id_/http%3A//www.rogersondemand.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	Privacy Policy - Rogers On Demand Online
 </title><meta name="google-site-verification" content="k9PDbntqbdXzbTbTmpTZfMHUMCXC7pH0QnQdlMAFiDQ"><base href="http://www.rogersondemand.com/">
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-<link type="text/css" rel="stylesheet" href="http://www-c.rogersondemand.com/css/1.2.6057.1310/main.css">
-<!--[if IE 6]><link type="text/css" rel="stylesheet" href="http://www-c.rogersondemand.com/css/1.2.6057.1310/ie6.css" /><![endif]-->
-<!--[if IE 7]><link type="text/css" rel="stylesheet" href="http://www-c.rogersondemand.com/css/1.2.6057.1310/ie7.css" /><![endif]-->
-<!--[if IE 8]><link type="text/css" rel="stylesheet" href="http://www-c.rogersondemand.com/css/1.2.6057.1310/ie8.css" /><![endif]-->
+<link type="text/css" rel="stylesheet" href="http://www-c.rogersondemand.com/css/1.2.6433.85/main.css">
+<!--[if IE 6]><link type="text/css" rel="stylesheet" href="http://www-c.rogersondemand.com/css/1.2.6433.85/ie6.css" /><![endif]-->
+<!--[if IE 7]><link type="text/css" rel="stylesheet" href="http://www-c.rogersondemand.com/css/1.2.6433.85/ie7.css" /><![endif]-->
+<!--[if IE 8]><link type="text/css" rel="stylesheet" href="http://www-c.rogersondemand.com/css/1.2.6433.85/ie8.css" /><![endif]-->
 </head>
 <body>
 	<form name="aspnetForm" method="post" action="/privacy" id="aspnetForm">
@@ -20,7 +20,7 @@
 <input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWAwK8nbO7CQLXsIi5CQLSx6n5DJc+wcYUeYCdCEedQV3I2qX63K22">
 	
 	
-<input type="hidden" id="DataVersion" value="KT0gIA">
+<input type="hidden" id="DataVersion" value="YTI1Nw">
 <noscript>
 <div class="alertBar">
 Javascript is required to use this website. For the best experience, please enable Javascript and reload this page.
@@ -35,7 +35,7 @@ Rogers On Demand Online is best viewed using Internet Explorer 7.0 (or higher), 
     <div class="leaderboard">
         
 <div class="ad ldbd">
-	<div id="ctl00_ctl00_M_ctl02_ctl01"><iframe src="http://ad.doubleclick.net/adi/rogers.rod/unknown;url=;fn=ad;kw=;tile=1;sz=728x90;br=unknown;ord=1300716774?" width="728" height="90" frameborder="0" border="0" scrolling="no"></iframe></div>
+	<div id="ctl00_ctl00_M_ctl02_ctl01"><iframe src="http://ad.doubleclick.net/adi/rogers.rod/unknown;url=;fn=ad;kw=;tile=1;sz=728x90;br=unknown;ord=374407712?" width="728" height="90" frameborder="0" border="0" scrolling="no"></iframe></div>
 </div>
 
     </div>
@@ -227,7 +227,7 @@ may contact a Rogers customer service representative who, if necessary, will ref
 	
 
 
-</form><script src="http://www-j.rogersondemand.com/js/1.2.6057.1310/ms.js" type="text/javascript"></script>
+</form><script src="http://www-j.rogersondemand.com/js/1.2.6433.85/ms.js" type="text/javascript"></script>
 <script type="text/javascript">
 //<![CDATA[
 Sys.Application.initialize();
@@ -235,9 +235,9 @@ Sys.Application.initialize();
 </script>
 
 	
-		<script type="text/javascript" src="http://www-j.rogersondemand.com/js/1.2.6057.1310/j.js"></script>
-<script type="text/javascript" src="http://www-j.rogersondemand.com/js/1.2.6057.1310/p.js"></script>
-<script type="text/javascript" src="http://www-j.rogersondemand.com/js/1.2.6057.1310/c.js"></script>
+		<script type="text/javascript" src="http://www-j.rogersondemand.com/js/1.2.6433.85/j.js"></script>
+<script type="text/javascript" src="http://www-j.rogersondemand.com/js/1.2.6433.85/p.js"></script>
+<script type="text/javascript" src="http://www-j.rogersondemand.com/js/1.2.6433.85/c.js"></script>
 
 		<script type="text/javascript">
 //<![CDATA[
@@ -421,7 +421,12 @@ s.split=new Function("l","d",""
 	s.dc = "122"
 </script>
 <script language="JavaScript" type="text/javascript"><!--
-    s.visitorNamespace='rogersmedia';
+(function(){
+var omnitureValsLoaded = false;
+function logOmnitureVals() {
+	if (!omnitureValsLoaded) {
+		omnitureValsLoaded = true;
+		s.visitorNamespace='rogersmedia';
 s.pageName='Privacy Policy - Rogers On Demand Online';
 s.eVar13='Privacy Policy - Rogers On Demand Online';
 s.prop19='';
@@ -431,14 +436,35 @@ s.prop23='None';
 s.eVar23='None';
 s.prop14='None';
 s.eVar14='None';
-s.prop24='no user id available';
-s.eVar24='no user id available';
-s.prop30='non-loggedin';
-s.eVar30='non-loggedin';
 
-    
-    /************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
-    var s_code = s.t(); if (s_code) document.write(s_code)//-->
+		if (RJS.User.signedIn) {
+			s.prop24=RJS.User.userID;
+			s.eVar24=RJS.User.userID;
+			s.prop30='loggedin';
+			s.eVar30='loggedin';
+		} else {
+			
+			if (RJS.User.userInfoLoaded) {
+				s.prop30='non-loggedin';
+				s.eVar30='non-loggedin';
+				s.prop24='no user id available';
+				s.eVar24='no user id available';
+			} else {
+				s.prop30='not-loaded-in-time';
+				s.eVar30='not-loaded-in-time';
+				s.prop24='no user id loaded in time';
+				s.eVar24='no user id loaded in time';
+			}
+		}
+		
+		/************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
+		var s_code = s.t(); if (s_code) document.write(s_code);
+    }
+}
+setTimeout(logOmnitureVals, 5000);
+RJS.User.add_UserInfoLoaded(logOmnitureVals);
+})();
+//-->
 </script>
 <script language="JavaScript" type="text/javascript"><!--
 	if (navigator.appVersion.indexOf('MSIE') >= 0) document.write(unescape('%3C') + '\!-' + '-')
@@ -463,7 +489,7 @@ s.eVar30='non-loggedin';
 </noscript>
 <!-- End comScore Tag -->
 		
-	<!--[if IE 6]><script type="text/javascript" src="http://www-j.rogersondemand.com/js/1.2.6057.1310/ie6.js"></script><![endif]-->
+	<!--[if IE 6]><script type="text/javascript" src="http://www-j.rogersondemand.com/js/1.2.6433.85/ie6.js"></script><![endif]-->
 
 
 
