--- a/i/in/int/integrationmarketing.com.html
+++ b/i/in/int/integrationmarketing.com.html
@@ -1,8 +1,9 @@
-<!--The following is the downloaded HTML source of the integrationmarketing.com privacy policy that was archived on 2009-04-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090416233223id_/http%3A//www.integrationmarketing.com/html/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the integrationmarketing.com privacy policy that was archived on 2010-08-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100815033605id_/http%3A//www.integrationmarketing.com/html/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="icon" href="/images/favicon.ico" type="image/ico"> 
 <title>Integration Marketing</title>
 <meta name="description" content="">
 <link href="/skin/template/romy/core.css" rel="stylesheet" type="text/css">
@@ -11,6 +12,7 @@
 <!--[if lt IE 7]>
 <script src="/js/cssfix/IE7.js" type="text/javascript"></script>
 <![endif]-->
+
 
 <style>
 
@@ -363,8 +365,12 @@ ul, li, blockquote{
 			<p><a href="/">Home</a> | <a href="/community">Members</a> | <a href="/support" target="_blank">Support</a> | <a href="/html/about">About</a> | <a href="http://www.joeaddison.name" target="_blank">RBB</a></p>
 			<p><a href="/html/privacypolicy">Privacy Policy</a> | <a href="/html/disclaimer">Disclaimer &amp; Legal Rights</a> | <a href="/html/tos">Terms of Service</a> | <a href="/html/earnings">Earnings Disclaimer</a></p>
 		</div>
-		<div id="im_foot">
-			<p>© <script language="javascript">document.write((new Date).getFullYear())</script>2020 Integration Marketing. All rights reserved. Mark Joyner Inc.</p>
+		<div id="im_foot" style="padding: 0px;">
+			<p>
+			Copyright © <script language="javascript">document.write((new Date).getFullYear())</script>2020 Construct Zero, Inc.  All Rights Reserved.
+			<br>
+			IntegrationMarketing.com is a subsidiary of Construct Zero, Inc.
+			</p>
 		</div>
 				</div>
 	</div>
