edrawsoft.com (archived on 2010-08-15)
{
  "alexa_rank": 60225,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 1346,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 9.92,
  "homepage_snapshot_redirected_domain": "edrawsoft.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101005235527id_/http://www.edrawsoft.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101005235527id_/http%3A//edrawsoft.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "edrawsoft.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100815071117id_/http%3A//www.edrawsoft.com/privacy.php",
  "policy_title": "Edraw Privacy",
  "policy_url": "edrawsoft.com/privacy.php",
  "sha1": "f29d95685992d5dba321b74c4daaee56b6c00382",
  "simhash": 368579087060638076,
  "simhash_updated": false,
  "site_hostname": "edrawsoft.com",
  "site_url": "http://edrawsoft.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100815071117",
  "word_count": 218,
  "year": 2010
}

--- a/e/ed/edr/edrawsoft.com.html
+++ b/e/ed/edr/edrawsoft.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the edrawsoft.com privacy policy that was archived on 2010-04-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100410195833id_/http%3A//www.edrawsoft.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the edrawsoft.com privacy policy that was archived on 2010-08-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100815071117id_/http%3A//www.edrawsoft.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en"><head>
 <title>Edraw Privacy</title>
@@ -71,9 +71,11 @@ document.getElementsByTagName("link")[0].href="css/"+title;
 <li><a href="Network-Diagrams.php" title="Edraw Network Diagram">Edraw Network Diagram</a></li>
 <li><a href="Software-Diagrams.php" title="Edraw UML Diagram">Edraw UML Diagram</a></li>
 <li><a href="freemind.php" title="Edraw Mind Map">Edraw Mind Map</a></li>
-<li><a href="EDraw-Flowchart-ActiveX.php" title="Flowchart ActiveX Control">Flowchart ActiveX Control</a></li>
 <li><a href="officeviewer.php" title="Office Viewer Component">Office Viewer Component</a></li>
+<li><a href="edexcel.php" title="Excel Viewer Component">Excel Viewer Component</a></li>
+<li><a href="edword.php" title="Word Viewer Component">Word Viewer Component</a></li>
 <li><a href="pdfviewer.php" title="PDF Viewer Component">PDF Viewer Component</a></li>
+<li><a href="edboard.php" title="Edraw Board Component">Edraw Board Component</a></li>
 </ul>
 <!--[if lte IE 6]></td></tr></table></a><![endif]-->
 </li>
