anime-access.com (archived on 2010-08-15)
{
  "alexa_rank": 12512,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 3449,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.28,
  "homepage_snapshot_redirected_domain": "anime-access.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100917055654id_/http://anime-access.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100917055654id_/http%3A//anime-access.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "anime-access.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100815093925id_/http%3A//anime-access.com/privacy",
  "policy_title": "Privacy Policy | Anime-Access.com",
  "policy_url": "anime-access.com/privacy",
  "sha1": "6ea84a1d3eecd8331ae037913df29a8fb9b3f2df",
  "simhash": 6747446334038681093,
  "simhash_updated": false,
  "site_hostname": "anime-access.com",
  "site_url": "http://anime-access.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100815093925",
  "word_count": 571,
  "year": 2010
}

--- a/a/an/ani/anime-access.com.html
+++ b/a/an/ani/anime-access.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the anime-access.com privacy policy that was archived on 2010-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100611125038id_/http%3A//www.anime-access.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the anime-access.com privacy policy that was archived on 2010-08-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100815093925id_/http%3A//anime-access.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -7,12 +7,13 @@
 <link rel="shortcut icon" href="/themes/default/favicon.ico" type="image/x-icon">
 <link rel="alternate" type="application/rss+xml" title="Anime-Access RSS Feed" href="/rss">
 <link rel="stylesheet" type="text/css" href="/style.css">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var Site = {baseUrl: "http:\/\/www.anime-access.com"}</script>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var Site = {baseUrl: "http:\/\/www.anime-access.com"}</script>
 <script type="text/javascript" src="/js/jquery.js"></script>
 <script type="text/javascript" src="/js/com/autocomplete/jquery.autocomplete.js"></script>
 <script type="text/javascript" src="/autocomplete.js"></script>
 <link rel="stylesheet" href="/js/com/autocomplete/jquery.autocomplete.css" type="text/css">
 <script type="text/javascript" src="/js/jquery.formHints.js"></script>
+<script type="text/javascript" src="/js/jquery.cookie.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
 <script type="text/javascript" src="/js/slideshow.js"></script>
 </head>
@@ -63,7 +64,7 @@
 				<div class="strip">
 									<a href="/articles/Gundam_00_the_Movie:_A_wakening_of_the_Trailblazer"><img title="Gundam 00 the Movie: A wakening of the Trailblazer" alt="Follow up movie for Mobile Suit Gundam 00 anime..." src="/img/promos/promo_f1.jpg"></a>
 									<a href="/articles/Code_Geass_Gaiden:_Boukoku_no_Akito"><img title="Code Geass Gaiden: Boukoku no Akito" alt="New information released to hint towards possibly a new Code Geass Anime!" src="/img/promos/promo_f2.jpg"></a>
-									<a href="/anime/F/Fullmetal_Alchemist:_Brotherhood_(TV)"><img title="Fullmetal Alchemist: Brotherhood" alt="A New Fullmetal Alchemist that follows the story of the FMA manga." src="/img/promos/promo_f3.jpg"></a>
+									<a href="/anime/B/Black_Lagoon:_Robertas_Blood_Trail_(OVA)"><img title="Black Lagoon: Robertas Blood Trail" alt="Robertas Blood Trail is a new five part Black Lagoon OVA series" src="/img/promos/promo_f3.jpg"></a>
 									<a href="/articles/Summer_2010_Anime_Lineup"><img title="Summer 2010 Anime Lineup" alt="Summer's sizzling with a hot lineup of anime series!" src="/img/promos/promo_f4.jpg"></a>
 									<a href="/articles/Spring_2010_Anime_Lineup"><img title="Spring 2010 Anime Lineup" alt="Over 40 new animes, OVA's and specials added this spring..." src="/img/promos/promo_f5.jpg"></a>
 								</div>
@@ -83,8 +84,8 @@
 		</td>
 			</tr>
 		<tr><td valign="top">
-			<a class="button " href="#p3" title="Fullmetal Alchemist: Brotherhood">
-				<b class="title">Revamped FMA</b>
+			<a class="button " href="#p3" title="Black Lagoon: Robertas Blood Trail">
+				<b class="title">Black Lagoon OVA</b>
 				<span class="icon"><img src="/img/promos/promo_t3.jpg"></span>
 				<span class="tail"></span>
 			</a>
@@ -151,11 +152,11 @@ Anime-Access reserves the right to change this, and any other policy located on 
 	<div class="boxtop">What's Hot?</div>
 	<div class="box">
 		<ul>
-					<li><b>1.</b> <a href="/anime/N/Naruto_Shippuuden_(TV)/episode/164">Naruto Shippuuden <b>164</b></a></li>
-					<li><b>2.</b> <a href="/anime/B/Bleach_(TV)/episode/274">Bleach <b>274</b></a></li>
-					<li><b>3.</b> <a href="/anime/B/Bleach_(TV)/episode/273">Bleach <b>273</b></a></li>
-					<li><b>4.</b> <a href="/anime/N/Naruto_Shippuuden_(TV)/episode/163">Naruto Shippuuden <b>163</b></a></li>
-					<li><b>5.</b> <a href="/anime/B/Bleach_(TV)/episode/272">Bleach <b>272</b></a></li>
+					<li><b>1.</b> <a href="/anime/B/Bleach_(TV)/episode/283">Bleach <b>283</b></a></li>
+					<li><b>2.</b> <a href="/anime/N/Naruto_Shippuuden_(TV)/episode/173">Naruto Shippuuden <b>173</b></a></li>
+					<li><b>3.</b> <a href="/anime/K/Kaichou_wa_Maid-sama!_(TV)/episode/20">Kaichou wa Maid-sama! <b>20</b></a></li>
+					<li><b>4.</b> <a href="/anime/K/Katekyo_Hitman_Reborn!_(TV)/episode/197">Katekyo Hitman Reborn! <b>197</b></a></li>
+					<li><b>5.</b> <a href="/anime/B/Bleach_(TV)/episode/282">Bleach <b>282</b></a></li>
 				</ul>
 	</div>
 </div>
@@ -172,36 +173,36 @@ Anime-Access reserves the right to change this, and any other policy located on 
 				<td colspan="2"><div style="margin-top: 5px; border-top: 1px solid #66ad15; padding-top: 5px;"></div></td>
 			</tr>
 			<tr>
-				<td width="52" valign="top"><a style="outline: none;" title="O" href="/anime/O/One_Piece_(TV)">		<img class="a_img" src="/upload/covers/F/thumbs/thumb_40x_f4df31d1a85b90_full(1).jpg" alt="One Piece">
+				<td width="52" valign="top"><a style="outline: none;" title="C" href="/anime/C/Case_Closed_(TV)">		<img class="a_img" src="/upload/covers/A/thumbs/thumb_40x_A454-1482.jpg" alt="Case Closed">
 	</a></td>
 				<td>
-					<div style="padding-bottom: 1px; font: bold 13px arial;"><a href="/anime/O/One_Piece_(TV)/reviews/id/954#review">best ever</a></div>
-					<div style="padding-bottom: 2px; font: normal 11px arial;">it s the best  it have a grate  story line grate charecters and an amaysing tern...</div>
-					<div><a href="/anime/O/One_Piece_(TV)/reviews/id/954"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"></a></div>
+					<div style="padding-bottom: 1px; font: bold 13px arial;"><a href="/anime/C/Case_Closed_(TV)/reviews/id/3476#review">Time to reach an end!</a></div>
+					<div style="padding-bottom: 2px; font: normal 11px arial;">I started off as a big fan of Detective Conan anime; complex crimes and deduction....</div>
+					<div><a href="/anime/C/Case_Closed_(TV)/reviews/id/3476"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_empty2.png"></a></div>
 				</td>
 			</tr>
 						<tr>
 				<td colspan="2"><div style="margin-top: 5px; border-top: 1px solid #66ad15; padding-top: 5px;"></div></td>
 			</tr>
 			<tr>
-				<td width="52" valign="top"><a style="outline: none;" title="F" href="/anime/F/Fullmetal_Alchemist:_Brotherhood_(TV)">		<img class="a_img" src="/upload/./thumbs/thumb_40x_200912180428101847188661.jpg" alt="Fullmetal Alchemist: Brotherhood">
+				<td width="52" valign="top"><a style="outline: none;" title="B" href="/anime/B/Bleach_(TV)">		<img class="a_img" src="/upload/covers/B/thumbs/thumb_40x_bd342a63d073aed97acf43fd79c9748f1275518287_large.jpg" alt="Bleach">
 	</a></td>
 				<td>
-					<div style="padding-bottom: 1px; font: bold 13px arial;"><a href="/anime/F/Fullmetal_Alchemist:_Brotherhood_(TV)/reviews/id/953#review">The best</a></div>
-					<div style="padding-bottom: 2px; font: normal 11px arial;">This anime has it all - a great story, detailed interesting characters, beautiful...</div>
-					<div><a href="/anime/F/Fullmetal_Alchemist:_Brotherhood_(TV)/reviews/id/953"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"></a></div>
+					<div style="padding-bottom: 1px; font: bold 13px arial;"><a href="/anime/B/Bleach_(TV)/reviews/id/3475#review">Bleach RULES</a></div>
+					<div style="padding-bottom: 2px; font: normal 11px arial;">This anime show is the best of all time. Good action, good storyline, good graphics,...</div>
+					<div><a href="/anime/B/Bleach_(TV)/reviews/id/3475"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"></a></div>
 				</td>
 			</tr>
 						<tr>
 				<td colspan="2"><div style="margin-top: 5px; border-top: 1px solid #66ad15; padding-top: 5px;"></div></td>
 			</tr>
 			<tr>
-				<td width="52" valign="top"><a style="outline: none;" title="K" href="/anime/K/Kuroshitsuji_(TV)">		<img class="a_img" src="/upload/./thumbs/thumb_40x_20091218100913882243229.jpg" alt="Kuroshitsuji">
+				<td width="52" valign="top"><a style="outline: none;" title="N" href="/anime/N/Naruto_Shippuuden_(TV)">		<img class="a_img" src="/upload/./thumbs/thumb_40x_20091218123658602923434.jpg" alt="Naruto Shippuuden">
 	</a></td>
 				<td>
-					<div style="padding-bottom: 1px; font: bold 13px arial;"><a href="/anime/K/Kuroshitsuji_(TV)/reviews/id/952#review">I agree ule123 !!</a></div>
-					<div style="padding-bottom: 2px; font: normal 11px arial;">I agree with ule123 , it's just so awesome!! and the most surprising is that ciel...</div>
-					<div><a href="/anime/K/Kuroshitsuji_(TV)/reviews/id/952"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"></a></div>
+					<div style="padding-bottom: 1px; font: bold 13px arial;"><a href="/anime/N/Naruto_Shippuuden_(TV)/reviews/id/3474#review">Naruto is getting lamer</a></div>
+					<div style="padding-bottom: 2px; font: normal 11px arial;">the plot is like a redo but with new characters, and the enemies are good but somehow...</div>
+					<div><a href="/anime/N/Naruto_Shippuuden_(TV)/reviews/id/3474"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_full2.png"><img src="/themes/default/images/rating/star_empty2.png"></a></div>
 				</td>
 			</tr>
 					</tbody></table>
@@ -209,8 +210,7 @@ Anime-Access reserves the right to change this, and any other policy located on 
 </div>
 
 
-				
-<div class="block">
+					<div class="block">
 	<div id="bluebox">
 		<table width="100%" border="0" cellspacing="0" cellpadding="0" style="font: normal 11px verdana;">
 			<tbody><tr>
@@ -220,51 +220,50 @@ Anime-Access reserves the right to change this, and any other policy located on 
 				<td colspan="2"><div class="tu_split"></div></td>
 			</tr>
 			<tr>
-				<td><span class="user">acoSays</span></td>
-				<td align="right"><b>12,492</b> files</td>
+				<td><span class="user">WickedSilver</span></td>
+				<td align="right"><b>1,890</b> files</td>
 			</tr>
-			<tr>
+						<tr>
 				<td colspan="2"><div class="tu_split2"></div></td>
 			</tr>
-			<tr>
-				<td><span class="user">Eikiro</span></td>
-				<td align="right"><b>322</b> files</td>
+						<tr>
+				<td><span class="user2">satoshiandkinki</span></td>
+				<td align="right"><b>1,094</b> files</td>
 			</tr>
-			<tr>
+						<tr>
 				<td colspan="2"><div class="tu_split2"></div></td>
 			</tr>
-			<tr>
-				<td><span class="user">and_and</span></td>
-				<td align="right"><b>32</b> files</td>
+						<tr>
+				<td><span class="user">jehutyx</span></td>
+				<td align="right"><b>914</b> files</td>
 			</tr>
-			<tr>
+						<tr>
 				<td colspan="2"><div class="tu_split2"></div></td>
 			</tr>
-			<tr>
-				<td><span class="user2">T___o</span></td>
-				<td align="right"><b>22</b> files</td>
+						<tr>
+				<td><span class="user2">shadowkitsha</span></td>
+				<td align="right"><b>587</b> files</td>
 			</tr>
-			<tr>
+						<tr>
 				<td colspan="2"><div class="tu_split2"></div></td>
 			</tr>
-			<tr>
-				<td><span class="user">hi2u</span></td>
-				<td align="right"><b>1</b> file</td>
+						<tr>
+				<td><span class="user">XeroCleaths</span></td>
+				<td align="right"><b>584</b> files</td>
 			</tr>
-		</tbody></table>
+				</tbody></table>
 	</div>
-</div>
-					
+</div>										<div class="block">
+<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="NO" width="300" height="250" src="http://ad.adtegrity.net/st?ad_type=iframe&amp;ad_size=300x250&amp;section=1130110"></iframe>
+					</div>
 					<div class="block">
 	<div id="stats">
 		<div style="padding-bottom: 4px; font: bold 13px arial;">Statistics</div>
 		<div style="font: normal 11px verdana;">
-			• Series: <b>429</b><br>
-			• Files: <b>12,349</b><br>
-			• Downloads: <b>354,464</b><br>
-			• Uploads: <b>1,824</b><br>
-			• Reviews: <b>949</b><br>
-						• Online Now: <b>159</b>
+			• Series: <b>918</b><br>
+			• Uploads: <b>16,745</b><br>
+			• Reviews: <b>3,436</b><br>
+						• Online Now: <b>179</b>
 		</div>
 	</div>
 </div>				</td>
@@ -281,8 +280,8 @@ Anime-Access reserves the right to change this, and any other policy located on 
 				<td colspan="2" style="padding-top: 12px; font: 9px verdana; color: #ccc;">
 					<table width="100%" border="0" cellspacing="0" cellpadding="0">
 						<tbody><tr>
-							<td>All times are GMT -5. The time now is 07:50 AM.<br>Page generated in <b>0.005</b> seconds using <b>1</b> query; loadavg: <b>0.00, 0.00, 0.00</b></td>
-							<td valign="bottom" align="right">© 2010 Anime-Access.com</td>
+							<td>All times are GMT -5. The time now is 04:39 AM.<br>Page generated in <b>0.005</b> seconds using <b>2</b> queries; loadavg: <b>0.06, 0.07, 0.07</b></td>
+							<td valign="bottom" align="right">© 2010 Anime Live Entertainment</td>
 						</tr>
 					</tbody></table>
 				</td>
@@ -301,6 +300,7 @@ ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www')
 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 })();
 </script>
+<script type="text/javascript">var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-11720816-3']);_gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
 <script type="text/javascript">
 _qoptions={
 qacct:"p-80zmEcAWEq8JM"
