directiq.com (archived on 2010-08-15)
{
  "alexa_rank": 396655,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 8039,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.13,
  "homepage_snapshot_redirected_domain": "directiq.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100824223920id_/http://www.directiq.com/us/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100824223920id_/http%3A//directiq.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "directiq.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100815212729id_/http%3A//www.directiq.com/us/privacy-policy.asp",
  "policy_title": "Privacy Policy - Intelligent Email Marketing by DirectIQ",
  "policy_url": "directiq.com/us/privacy-policy.asp",
  "sha1": "21eb95f1e142b5ecf5b45e8b1ef55ad5da1c135f",
  "simhash": 12493894975662040837,
  "simhash_updated": false,
  "site_hostname": "directiq.com",
  "site_url": "http://directiq.com",
  "smog": 15.02,
  "strict_updated": true,
  "timestamp": "20100815212729",
  "word_count": 1319,
  "year": 2010
}

--- a/d/di/dir/directiq.com.html
+++ b/d/di/dir/directiq.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the directiq.com privacy policy that was archived on 2010-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100616085459id_/http%3A//www.directiq.com/us/privacy-policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the directiq.com privacy policy that was archived on 2010-08-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100815212729id_/http%3A//www.directiq.com/us/privacy-policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy - Intelligent Email Marketing by DirectIQ</title>
@@ -38,6 +38,10 @@ function MM_swapImage() { //v3.0
 <script type="text/javascript" charset="iso-8859-1" src="https://server.iad.liveperson.net/hcp/html/mTag.js?site=84471892"></script></head>
 
 <body onload="MM_preloadImages('images/button-signupforfree-on.png','images/arrow-magenta-on.png','images/arrow-green-on.png','images/button-createaccount-on.png')">
+<script type="text/javascript">
+    var userflyHost = (("https:" == document.location.protocol) ? "https://secure.userfly.com" : "http://asset.userfly.com");
+    document.write(unescape("%3Cscript src='" + userflyHost + "/users/51676/userfly.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://secure.userfly.com/users/51676/userfly.js" type="text/javascript"></script>
 <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 <a name="top" id="top"></a>
 <table width="950" border="0" align="center" cellpadding="0" cellspacing="0" background="/us/images/birds.png">
@@ -45,7 +49,7 @@ function MM_swapImage() { //v3.0
     <td height="74" align="right" valign="bottom"><table border="0" cellpadding="0" cellspacing="0" class="buttontype">
       <tbody><tr>
         <td class="black"><span class="login"><a href="https://www.directiq.com/system/" title="Client Login">Login Here</a></span> <span class="white">&nbsp;or&nbsp;</span></td>
-        <td><a href="/us/sign-up.asp" title="Free Signup" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('sign-up','','/us/images/button-signupforfree-on.png',1)"><img src="/us/images/button-signupforfree.png" name="sign-up" width="231" height="51" border="0" id="sign-up" alt="Sign Up For Free!"></a></td>
+        <td><a href="https://www.directiq.com/us/sign-up.asp" title="Free Signup" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('sign-up','','/us/images/button-signupforfree-on.png',1)"><img src="/us/images/button-signupforfree.png" name="sign-up" width="231" height="51" border="0" id="sign-up" alt="Sign Up For Free!"></a></td>
         <td width="20">&nbsp;</td>
       </tr>
       <tr>
