--- a/s/sk/ska/skatevideosite.com.html
+++ b/s/sk/ska/skatevideosite.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the skatevideosite.com privacy policy that was archived on 2010-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100612053418id_/http%3A//www.skatevideosite.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the skatevideosite.com privacy policy that was archived on 2010-08-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100818080555id_/http%3A//www.skatevideosite.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
    <title>Privacy policy | SkatevideoSite</title>
@@ -10,7 +10,24 @@
    <link rel="stylesheet" href="/styles/default.css">
    <link rel="stylesheet" href="/styles/basicstyle.css">
    <link rel="shortcut icon" href="/favicon.ico">
-   <script type="text/javascript" src="/external.js"></script>	
+   <script type="text/javascript" src="/external.js"></script>
+
+<script language="javascript" type="text/javascript">
+function showHide(shID) {
+   if (document.getElementById(shID)) {
+      if (document.getElementById(shID+'-show').style.display != 'none') {
+         document.getElementById(shID+'-show').style.display = 'none';
+         document.getElementById(shID).style.display = 'block';
+      }
+      else {
+         document.getElementById(shID+'-show').style.display = 'inline';
+         document.getElementById(shID).style.display = 'none';
+      }
+   }
+}
+</script>
+
+
 	
 </head>
 
@@ -59,6 +76,7 @@
 <a href="/downloads">Downloads</a>
 <a href="/covers">Covers</a>
 <a href="/skaters">Skaters</a>
+<a href="/filmmakers">Filmmakers</a>
 <a href="/companies">Companies</a>
 <a href="/search">Search</a>
 <a href="/register">Register</a>
@@ -88,54 +106,55 @@ You can choose to disable or selectively turn off our cookies or third-party coo
 </p>
 </div>
 <div id="right">
-<p class="navtitle">12.06.2010</p>
+<p class="navtitle">18.08.2010</p>
 
-<strong>4644</strong> registered users.<br>
-Users Online: 75
+<strong>5005</strong> registered users.<br>
+Users Online: 87
 <br>
-<strong>73</strong> Guests<br>
-<strong>2</strong> Members<br>
-<a href="/user/12179">Tiffany</a>
-<a href="/user/12183">elpiso</a>
+<strong>84</strong> Guests<br>
+<strong>3</strong> Members<br>
+<a href="/user/12333">mgeeskates</a>
+<a href="/user/3224" title="Staff">Kudy <img src="/images/icons/staff.gif" alt="Staff"></a>
+<a href="/user/12314">rad</a>
 
 <a href="/users">Show all</a>
 <p class="navtitle">New downloads</p>
 
-<a href="http://www.skatevideosite.com/watch/5852" title="Added 8 hours ago" style="color: #d94d3f;">Bob Anderson</a>
-<a href="http://www.flipskateboards.com/media_videos_lance.html" title="Added 9 hours ago" style="color: #d94d3f;" rel="external nofollow">Lance Mountain</a>
-<a href="http://www.skatevideosite.com/watch/5850" title="Added 21 hours ago" style="color: #d94d3f;">Mundo Rad Montage</a>
-<a href="http://www.theberrics.com/dailyopspost.php?postid=1997" rel="external nofollow">Jake Duncombe - Bangin!</a>
-<a href="http://www.skatevideosite.com/watch/5848">Agency Thursdays: Lafayette Quarterpipe Sesh/Bust</a>
-<a href="http://www.skatevideosite.com/watch/5847">New World Disorder Shiner Distribution Pt. 2</a>
-<a href="http://www.skatevideosite.com/watch/5846">New World Disorder Shiner Distribution Pt. 1</a>
-<a href="http://www.skatevideosite.com/watch/5845">C1RCA Team at Sheckler’s TF</a>
-<a href="http://www.habitatskateboards.com/files/habitat_Origin_Official_Trailer.m4v" rel="external nofollow">Habitat - Origin</a>
-<a href="http://www.skatevideosite.com/watch/5843">Doin' It Baja Pt. 2 Of 8</a>
-<a href="http://www.skatevideosite.com/watch/5842">The Crosswalk Video</a>
-<a href="http://download.skaterock.cz/video/ondrej_peter_DC_tie.flv" rel="external nofollow">DC Czech welcomes Peter Molec &amp; Ondro Leskoviansky</a>
-<a href="http://www.skatevideosite.com/watch/5840">Rodrigo¨maizena¨ Leal </a>
-<a href="http://www.skatevideosite.com/watch/5839">Volcom - Wild In The Parks Stop #5</a>
-<a href="http://www.skatevideosite.com/watch/5838">Volcom - Wild In The Parks Stop #4</a>
-<a href="http://www.skatevideosite.com/watch/5837">Volcom - Wild In The Parks Stop #3</a>
-<a href="http://www.skatevideosite.com/watch/5836">Volcom - Wild In The Parks Stop #2</a>
-<a href="http://www.skatevideosite.com/watch/5835">Volcom - Having Fun At Maloof Money Cup</a>
-<a href="http://www.skatevideosite.com/watch/5834">Maloof Money Cup 2010 Slow Motion Finals</a>
-<a href="http://www.skatevideosite.com/watch/5833">Volcom - Skatopia Pt.2</a>
-<a href="http://www.skatevideosite.com/watch/5832">Wild Power in Hawthorne</a>
-<a href="http://www.skatevideosite.com/watch/5831">Traffic Report 6/8/2010</a>
-<a href="http://www.skatevideosite.com/watch/5829">Shane O'Neill at Maloof Money Cup</a>
-<a href="http://www.skatevideosite.com/watch/5828">Jart Flow  - Basque Country Tour 2010 </a>
-<a href="http://www.skatevideosite.com/watch/5827">Alain Goikoetxea</a>
-<a href="http://www.skatevideosite.com/watch/5826">Crème Spain - Weekend In Barcelona</a>
-<a href="http://www.skatevideosite.com/watch/5825">Crème - Skatebowl Breathe Pt.4</a>
-<a href="http://www.skatevideosite.com/watch/5824">Crème - Skatebowl Breathe Pt.3</a>
-<a href="http://www.skatevideosite.com/watch/5823">Crème - Skatebowl Breathe Pt.2</a>
-<a href="http://www.skatevideosite.com/watch/5822">Crème - Skatebowl Breathe Pt.1</a>
-<a href="http://www.skatevideosite.com/watch/5821">Nike Sb Italy - Trip to Bangkok</a>
-<a href="http://www.skatevideosite.com/watch/5820">Willow at Trier, Germany</a>
-<a href="http://www.skatevideosite.com/watch/5819">Think Promo 2010</a>
-<a href="http://www.skatevideosite.com/watch/5818">Etnies - Ryan Shekler Make A Wish</a>
-<a href="http://www.skatevideosite.com/watch/5817">Cory Kennedy &amp; Friends - SAMOness </a>
+<a href="http://www.skatevideosite.com/watch/6417" title="Added 9 hours ago" style="color: #d94d3f;">  Ben Raemers At The Ripon Park</a>
+<a href="http://www.skatevideosite.com/watch/6415" title="Added 16 hours ago" style="color: #d94d3f;">Vans Downtown Shodown 2010</a>
+<a href="http://www.skatevideosite.com/watch/6414" title="Added 17 hours ago" style="color: #d94d3f;">Prevent This Tragedy -  Nick Trapasso</a>
+<a href="http://www.enjoico.com/video/?cvid=23" title="Added 17 hours ago" style="color: #d94d3f;" rel="external nofollow">Enjoi - A Weak Long Tour: Pitcrew</a>
+<a href="http://www.skatevideosite.com/watch/6412" title="Added 17 hours ago" style="color: #d94d3f;">Crosshairs and Cold Ones Pt.1</a>
+<a href="http://www.skatevideosite.com/watch/6411" title="Added 17 hours ago" style="color: #d94d3f;">Mondays With Mike V: Episode #18</a>
+<a href="http://www.skatevideosite.com/watch/6410" title="Added 17 hours ago" style="color: #d94d3f;">Drifter Jungle Pt.1</a>
+<a href="http://www.skatevideosite.com/watch/6409" title="Added 17 hours ago" style="color: #d94d3f;">Joey Brezinski preps for Red Bull Manny Mania 2010</a>
+<a href="http://www.skatevideosite.com/watch/6408" title="Added 21 hours ago" style="color: #d94d3f;">P-Rod Nike SB Commercial</a>
+<a href="http://skateboarding.transworld.net/skate-and-create/" rel="external nofollow">Skate &amp; Create 2010 - Adidas </a>
+<a href="http://www.skatevideosite.com/watch/6403">Elwood - Kenny Anderson Artist Reel</a>
+<a href="http://theskateboardmag.com/watch/nyjah-huston/" rel="external nofollow">Nyjah Huston Mag Minute</a>
+<a href="http://www.tackyworld.com/skateboard/video/?id=157320" rel="external nofollow">Crossroads - Mini Ramp Jam</a>
+<a href="http://www.tackyworld.com/skateboard/video/?id=157516" rel="external nofollow">Crossroads - Best Trick</a>
+<a href="http://www.skatevideosite.com/watch/6399">Street League - Red Teaser</a>
+<a href="http://etnies.com/blog/2010/8/15/tyler-bledsoe-clips-from-zumiez/" rel="external nofollow">Etnies - Tyler Bledsoe clips from Zumiez</a>
+<a href="http://www.skatevideosite.com/watch/6397">Justin Brock - The Skateboarding Collection </a>
+<a href="http://www.skatevideosite.com/watch/6396">LRG Introduces Chico Brenes</a>
+<a href="http://www.skatevideosite.com/watch/6395">Blind Sunday Fundays #24</a>
+<a href="http://www.skatevideosite.com/watch/6394">Basel ESC Impressions</a>
+<a href="http://www.skatevideosite.com/watch/6393">Alvaro Roman - Collective commercial</a>
+<a href="http://www.skatevideosite.com/watch/6392">Leo Romero - Rvca</a>
+<a href="http://www.skatevideosite.com/watch/6391">Mike Mo Capaldi vs. Mark Appleyard</a>
+<a href="http://static.etnies.com/content/features/zorchwest-tour.mov" rel="external nofollow">Etnies - Zorchwest Tour</a>
+<a href="http://www.skatevideosite.com/watch/6389">WITP Finland 2010</a>
+<a href="http://www.skatevideosite.com/watch/6388">Vans - A.V.E. "In The Cut"</a>
+<a href="http://video.blackboxdist.com/2010/mystery-carlin-color-theory.mp4" rel="external nofollow">Mystery Color Theory - Jimmy Carlin</a>
+<a href="http://www.skatevideosite.com/watch/6386">Black Fridays: Zero Kansas City Demo</a>
+<a href="http://www.tumyeto.com/videos/60/marquis+preston+welcome+video/" rel="external nofollow">Marquis Preston on Foundation</a>
+<a href="http://www.skatevideosite.com/watch/6383">Quartersnacks.com: 25 Cent SBs</a>
+<a href="http://video.blackboxdist.com/2010/denver_bitch_edit_final.flv" rel="external nofollow">Zero - Wet Hot American Summer Tour Denver Skatepark </a>
+<a href="http://www.skatevideosite.com/watch/6381">Hopps - Jerry Fowler</a>
+<a href="http://media.dlxsf.com/real_maloof_10/real_maloof.m4v" rel="external nofollow">Real at Maloof 2010</a>
+<a href="http://www.skatevideosite.com/watch/6379">Zumiez Belgium in Basel</a>
+<a href="http://www.skatevideosite.com/watch/6378">Double Rock: Kyle Berard</a>
  
 
 <a href="/downloads" style="margin-top: 5px;">Show all</a>
